--- a/templates/frequency.html
+++ b/templates/frequency.html
@@ -11,7 +11,7 @@
                   <th scope="col">Przeciwnik</th>
                   <th scope="col">Liczba obecnych</th>
                   <th scope="col">Liczba nieobecnych</th>
-                  <th scope="col">Brak decyzji</th>
+                  <th scope="col">Liczba bez decyzji</th>
                 </tr>
               </thead>
               <tbody>
