--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,9 @@
             <a class="nav-link" href="/team/frequency">Frekwencja na meczach</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/password_change">Zmiana hasła</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/logout">Logout</a>
           </li>
         </ul>
