--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,19 +9,50 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/9dce0a2c76.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Logowanie</title>
+    <style>
+        label
+    </style>
 </head>
 <body>
-    <h1>Logowanie</h1>
-    {%if form.errors %}
-        <p>Nazwa użytkownika lub hasło są nieprawidłowe</p>
-    {%else%}
+
+    <div class="form-outline mb-4">
         <form action="{% url 'login' %}" method="post">
-        {{form.as_p}}
-        {% csrf_token %}
-        <input type="hidden" name="next" value="{{next}}" />
-        <input type="submit" value"Zaloguj"/>
-    {%endif%}
+    </div>
+    {% csrf_token %}
+    <section class="vh-100" style="background-color: #508bfc;">
+        <div class="container py-5 h-100">
+          <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+              <div class="card shadow-2-strong" style="border-radius: 1rem;">
+                <div class="card-body p-5 text-center">
+      
+                  <h3 class="mb-5">Logowanie</h3>
+      
+                  <div class="form-outline mb-4">
+                    <input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="typeEmailX-2" class="form-control form-control-lg" />
+                    <label class="form-label" for="typeEmailX-2">Login</label>
+                    
+                  </div>
+      
+                  <div class="form-outline mb-4">
+                    <input type="password" name="password" autocomplete="current-password" required="" id="id_password" class="form-control form-control-lg" />
+                    <label class="form-label" for="typePasswordX-2">Hasło</label>
+
+                  </div>
+
+                  {%if form.errors %}
+                  <p style="color:red">Nazwa użytkownika lub hasło są nieprawidłowe</p>
+                  {%endif%}
+                  <input type="hidden" name="next" value="{{next}}" />
+                  <input class="btn btn-primary btn-lg btn-block" type="submit" value="Zaloguj"/>
+      
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </form>
 </body>
 </html>
