--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -27,7 +27,7 @@
               <div class="card shadow-2-strong" style="border-radius: 1rem;">
                 <div class="card-body p-5 text-center">
       
-                  <h3 class="mb-5">Logowanie</h3>
+                  <h3 class="mb-5">Logowanie!</h3>
       
                   <div class="form-outline mb-4">
                     <input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="typeEmailX-2" class="form-control form-control-lg" />
