add pages to top website

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,9 @@
             <a class="nav-link" href="/team/frequency">Frekwencja na meczach</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/team/training_vote">Głosowanie - treningi</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/password_change">Zmiana hasła</a>
           </li>
           <li class="nav-item">
